<resources>
    <string name="app_name">ProjektSM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Exerciis Meum</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Reset database</string>

    <string name="menu_addTraining">Add training</string>
    <string name="menu_addExercise">Exercise manager</string>
    <string name="menu_readMotivation">Motivation</string>
    <string name="get_motivation">Get Motivation!</string>
    <string name="exerciseNameIsEmptyToast">Please fill the name of new exercise!</string>
    <string name="trainingScoreIsEmptyToast">Please fill the score of the exercise!</string>
    <string name="are_you_sure_to_reset_database">Are you sure to reset database?</string>
    <string name="list_of_trainings">List of trainings</string>
    <string name="add">Add</string>
    <string name="add_training">Add training</string>
    <string name="get">get</string>
    <string name="list_of_exercises">List of exercises</string>
    <string name="add_new_exercise">Add new exercise</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>