<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_addTraining">

    <fragment
        android:id="@+id/nav_addTraining"
        android:name="com.example.projektsm.ui.training.AddTrainingFragment"
        android:label="@string/menu_addTraining"
        tools:layout="@layout/fragment_exercise" />

    <fragment
        android:id="@+id/nav_exerciseManager"
        android:name="com.example.projektsm.ui.exercise.ExerciseManagerFragment"
        android:label="@string/menu_addExercise"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/nav_motivation"
        android:name="com.example.projektsm.ui.motivation.MotivationFragment"
        android:label="@string/menu_readMotivation"
        tools:layout="@layout/fragment_motivation" />
</navigation>